--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -579,7 +579,7 @@
   
   
         <h2 id="hdng13">Employer source deductions</h2>
-<p>Each of the following type of employer source deductions information applies to <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a></p>
+<p>Each of the following types of employer source deductions applies to a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a></p>
 
 <details><summary>Income tax deductions at source</summary>
 <p>Income tax deductions at source do not apply to income that is exempt under section 87 of the Indian Act. Where it is established that employment income paid to a First Nations employee is exempt from tax, the employee can ask his or her employer to waive the tax deductions at source. <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">Form TD1-IN</a>, Determination of Exemption of an Indian's Employment Income, will help employers determine the appropriate tax treatment for employees.&nbsp;Where employers determine that a First Nations employee's employment income is exempt under section 87 of the Indian Act and they grant the waiver requested by the employee, the employers have to keep a completed copy of Form TD1-IN for each of these employees, in case we ask them to see the forms later.</p>
@@ -601,7 +601,7 @@
 <p>Learn more on the employer's withholding and reporting obligations: <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/first-nations.html">Payments to First Nations workers</a>.</p>
     
         <h2 id="hdng15">Excise duties and taxes </h2>
-<p>Excise duties and taxes apply to certain products. The manufacturer or distributor, not the consumer, pays these taxes. The CRA administers the legislation which regulates the products to which these taxes apply. The CRA also licenses the manufacturers of these products. Although an amount equal to the tax may be included in the price, the courts have confirmed that <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a> are not exempt from such an indirect tax.</p>
+<p>Excise duties and taxes apply to certain products. The manufacturer or distributor, not the consumer, pays these taxes. The CRA administers the legislation which regulates the products to which these taxes apply. The CRA also licenses the manufacturers of these products. Although an amount equal to the tax may be included in the price, the courts have confirmed that a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a> is not exempt from such an indirect tax.</p>
 <p>Federal excise duty applies to alcohol and tobacco products. The Excise Act, 2001 is the legislation that imposes excise duty on spirits, wine and tobacco products while the Excise Act governs beer. </p>
 <p>Learn more about licensing and paying excise duty and how to contact the office in your region: <a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-act-2001-technical-information/excise-duty-memoranda.html">Excise Duty Memorandum 1.1.2, Regional Excise Duty Offices</a></p>
 <p>The Excise Tax Act imposes federal excise tax on motive fuel products, automotive air conditioners and certain fuel-inefficient vehicles and insurance premiums. </p>
@@ -620,11 +620,11 @@
  
         <h2 id="hdng16">Goods and services tax/Harmonized sales tax (GST/HST)</h2>
 <p>The GST applies to most supplies of property and services made in Canada. The HST applies to most supplies of property and services in the provinces of Nova Scotia, New Brunswick, Newfoundland and Labrador, Prince Edward Island, and Ontario.</p>
-<p>Purchases of property and services by <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a> may be relieved from GST/HST.</p>
+<p>Purchases of property and services by a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a> may be relieved from GST/HST.</p>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples.html">GST/HST and Indigenous peoples</a></p>
    <h3>Other taxes specific to First Nations and Indigenous governments</h3>
-<p>Oher taxes specific to First Nations and Indigenous governments may also apply. All individuals, including First Nations individual, have to pay these taxes if they apply.</p>
+<p>Other taxes specific to First Nations and Indigenous governments may also apply. All individuals, including First Nations individual, have to pay these taxes if they apply.</p>
 <p>Learn more about the following taxes that may apply on lands governed by a First Nation or an Indigenous government:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples/first-nations-goods-services-tax.html">First Nations goods and services Tax (FNGST)</a></li>
@@ -642,7 +642,7 @@
  </dt> 
  <dd> 
  <div id="ajax-fnterm">  <p>For purposes of the tax exemption under section 87 of the Indian Act, the Canada Revenue Agency uses the term “First Nations”, which means a person who is an Indian as defined in the Indian Act. This term is defined in the Indian Act as a person who is registered as an Indian or is entitled to be registered as an Indian. Determining whether a person is entitled to be registered as an Indian is a question of fact.</p> 
-<p>Learn more about registration under the Indian Act from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986">Benefits, rights, programs and services</a> </p></div> 
+<p>Learn more about registration under the Indian Act from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986">About Indian status</a> </p></div> 
  </dd> 
  <dt> 
   <strong>Reserve</strong> 
