--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -239,7 +239,7 @@
 
  <h2 id="h_7a">What to do if you have First Nations employees</h2>
 <p>The employment income of a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employees <span class="far fa-question-circle"></span></a> which is exempt from income tax is not subject to CPP contributions.</p>
-<p>You have the option to file for CPP coverage for your First Nations employees by filing out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">Form CPT124</a>.</p>
+<p>You have the option to file for CPP coverage for your First Nations employees by filing out Form CPT124.</p>
 
 <p>If you choose not to apply for coverage, a First Nations employee can elect to pay CPP on tax-exempt earnings by filling out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">Form CPT20, Election to Pay Canada Pension Plan Contributions</a> when filing their personal income tax return.</p>
  
@@ -248,7 +248,7 @@
 
 
  <h2 id="h_7b">What to do if you have employees outside Canada</h2>
-<p>If you have employees working outside of Canada, you have the option to file for CPP coverage for your employees by filing out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt8.html">Form CPT8</a> if the employment meets <strong>all</strong> conditions.</p>
+<p>If you have employees working outside of Canada, you have the option to file for CPP coverage for your employees by filing out Form CPT8 if the employment meets <strong>all</strong> conditions.</p>
 
 <p>Learn more about the conditions: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt8.html">Form CPT8, Application and Undertaking to Cover Employment Outside Canada under the Canada Pension Plan</a></p>
 
