--- a/payroll/calculate/payment/first-nations-pop2.html
+++ b/payroll/calculate/payment/first-nations-pop2.html
@@ -120,7 +120,7 @@
 
 <details><summary><strong>Self-employment</strong> on a reserve</summary>
        
- <p>A <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations worker's <span class="far fa-question-circle"></span></a> income from self-employment on a reserve is not included in contributory earnings for <abbr title="Canada Pension Plan">CPP</abbr> purposes. However, a provision of the Canada Pension Plan Regulations has the effect of negating this exclusion under the Canada Pension Plan. Consequently, an First Nations worker who is self-employed on a reserve can participate in the <abbr title="Canada Pension Plan">CPP</abbr>.</p>  
+ <p>A <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations worker's <span class="far fa-question-circle"></span></a> income from self-employment on a reserve is not included in contributory earnings for <abbr title="Canada Pension Plan">CPP</abbr> purposes. However, a provision of the Canada Pension Plan Regulations has the effect of negating this exclusion under the Canada Pension Plan. Consequently, a First Nations worker who is self-employed on a reserve can participate in the <abbr title="Canada Pension Plan">CPP</abbr>.</p>  
 
 <p>A First Nations worker who is self-employed on a reserve and wishes to participate in the <abbr title="Canada Pension Plan">CPP</abbr> must meet all of the following conditions:</p> 
 
