--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -248,9 +248,25 @@
 
 
  <h2 id="h_7b">What to do if you have employees outside Canada</h2>
-<p>If you have employees working outside of Canada, you have the option to file for CPP coverage for your employees by filing out Form CPT8 if the employment meets <strong>all</strong> conditions.</p>
+<p>If you have employees working outside of Canada, you have the option to file for CPP coverage for your employees by filing out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt8.html">Form CPT8, Application and Undertaking to Cover Employment Outside Canada under the Canada Pension Plan</a> if the employment meets <strong>all</strong> conditions.</p>
 
-<p>Learn more about the conditions: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt8.html">Form CPT8, Application and Undertaking to Cover Employment Outside Canada under the Canada Pension Plan</a></p>
+<details><summary>What are the conditions</summary>
+<p>The employment must meet <strong>all </strong>of the following conditions:</p>
+
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">There is no social security agreement between Canada and the country where the employment is taking place </li>
+<li class="cnjnctn-col">The employment outside Canada would be pensionable if it were in Canada </li>
+<li class="cnjnctn-col">The employee must also meet one of the following conditions:
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col">Ordinarily reports for work at an establishment in Canada of his or her employer </li>
+<li class="cnjnctn-col">Is resident in Canada and is paid at or from an establishment in Canada of his or her employer </li>
+<li class="cnjnctn-col">Is an employee, other than an employee engaged locally outside Canada, of Her Majesty in right of Canada </li>
+<li class="cnjnctn-col">Performs services under an international development assistance program (subject to certain conditions) </li>
+<li class="cnjnctn-col">Is the spouse or common-law partner of an employee described in the previous two situations (subject to some conditions) </li>
+<li class="cnjnctn-col">Is an employee of Her Majesty in right of Canada who is locally engaged (subject to certain conditions) </li>
+ </ul> </li>
+</ul>
+</details>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/canada-pension-plan-cpp/employment-outside-canada/employment-a-country-where-a-social-security-agreement-been-signed-canada-1.html">Employment in a country where a social security agreement has not been signed with Canada</a></p>
 
