--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -475,7 +475,7 @@
 <p>The CRA will continue to review other situations based on the facts of each case. The examples provided below may help you determine if your income is situated on a reserve, and thus exempt from tax.</p>
 
 <section class="alert alert-info">
-<p>Each of the individuals in the following examples are a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual  <span class="far fa-question-circle"></span></a>. </p>
+<p>Each of the individuals in the following examples is a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual  <span class="far fa-question-circle"></span></a>. </p>
 </section> 
 <details><summary>Examples where exempt or not exempt</summary>
 
