--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1008,7 +1008,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <h4 id="exempttax">Determine if you are exempt from paying the tax</h4>
                 <p>You <strong>must file</strong> an Underused Housing Tax return for the calendar year, <strong>even if</strong> you qualify for an exemption.</p>
               </div>
-              <p class="wb-fieldflow-label"><span id="labelledby1a" aria-labelledby="labelledby1a labelledby1b">As an affected owner of the residential property, are you one of the following:</span></p>
+              <p class="wb-fieldflow-label"><span id="labelledby1a" aria-labelledby="labelledby1a labelledby1b">As an affected owner of the residential property, are you a:</span></p>
               <div data-ajax-replace="#exp-1" class="gc-font-2019 mrgn-bttm-md" id="labelledby1b"></div>
             </div>
             <ul>
@@ -1076,7 +1076,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <h4 id="exempttax-corp">Determine if you are exempt from paying the tax</h4>
                 <p>You <strong>must file</strong> an Underused Housing Tax return for the calendar year, <strong>even if</strong> you qualify for an exemption.</p>
               </div>
-              <p class="wb-fieldflow-label"><span id="labelledby4a" aria-labelledby="labelledby4a labelledby4b">As an affected owner of the residential property, are you one of the following:</span></p>
+              <p class="wb-fieldflow-label"><span id="labelledby4a" aria-labelledby="labelledby4a labelledby4b">As an affected owner of the residential property, are you a:<span></p>
               <div data-ajax-replace="#exp-1" class="gc-font-2019 mrgn-bttm-md" id="labelledby4b"></div>
             </div>
             <ul>
@@ -1216,7 +1216,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <p>New owner in the calendar year</p>
               </li>
               <li>
-                <p>Co-owner or personal representative of a deceased owner, or if the owner was deceased in the current or previous calendar year</p>
+                <p>Deceased owner, or a co-owner or personal representative of a deceased owner</p>
               </li>
 		    <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681246">UHTN4, What are specified Canadian partnerships, trusts, and corporations</a></p>
             </p>
