--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -250,7 +250,7 @@
  <h2 id="h_7b">What to do if you have employees outside Canada</h2>
 <p>If you have employees working outside of Canada, you have the option to file for CPP coverage for your employees by filing out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt8.html">Form CPT8, Application and Undertaking to Cover Employment Outside Canada under the Canada Pension Plan</a> if the employment meets <strong>all</strong> conditions.</p>
 
-<details><summary>What are the conditions</summary>
+<details><summary>What are the <strong>conditions</strong></summary>
 <p>The employment must meet <strong>all </strong>of the following conditions:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
