--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -206,10 +206,10 @@
 <hr>
 <h4>Indicator: Contract is not valid</h4>
 <p class="mrgn-tp-md">The parties involved must be legally capable of entering into the contract to be considered a valid contract. For example, as per the respective provincial Employment Standards, one of the following applies:</p>
-	<ul>
-<li>The worker does not have the legal age to work</li>
-<li>The parents or legal guardians did not provide written consent for the minor child to work</li>
-<li>One of the parties have a mental disability that prevents them from understanding the nature of the contract</li>
+	<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col">The worker does not have the legal age to work</li>
+<li class="cnjnctn-col">The parents or legal guardians did not provide written consent for the minor child to work</li>
+<li class="cnjnctn-col">One of the parties have a mental disability that prevents them from understanding the nature of the contract</li>
 </ul>
 
 <div data-ajax-replace="#ajax-contract-not-gen"></div>
