--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -232,7 +232,7 @@
                The agreement is not mutual</h3>
 <hr>
 <h4>Indicator: Contract is not valid</h4>
-<p class="mrgn-tp-md">The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms) to be considered a valid contract.  </p>
+<p class="mrgn-tp-md">The agreement must be mutual to be considered a valid contract. Generally, this means the parties must have the intention to enter into the contract and be bound by its terms.  </p>
 
 <div data-ajax-replace="#ajax-contract-not-gen"></div>
      
