--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -238,7 +238,7 @@
            </details> 
 
  <h2 id="h_7a">What to do if you have First Nations employees</h2>
-<p>The employment income of a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employees <span class="far fa-question-circle"></span></a> which is exempt from income tax is not subject to CPP contributions.</p>
+<p>The employment income of a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee <span class="far fa-question-circle"></span></a> which is exempt from income tax is not subject to CPP contributions.</p>
 <p>You have the option to file for CPP coverage for your First Nations employees by filing out Form CPT124.</p>
 
 <p>If you choose not to apply for coverage, a First Nations employee can elect to pay CPP on tax-exempt earnings by filling out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">Form CPT20, Election to Pay Canada Pension Plan Contributions</a> when filing their personal income tax return.</p>
@@ -248,9 +248,9 @@
 
 
  <h2 id="h_7b">What to do if you have employees outside Canada</h2>
-<p>If you have employees working outside of Canada, you have the option to file for CPP coverage for your employees by filing out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt8.html">Form CPT8, Application and Undertaking to Cover Employment Outside Canada under the Canada Pension Plan</a> if the employment meets <strong>all</strong> conditions.</p>
+<p>If you have employees working outside of Canada, you have the option to file for CPP coverage for your employees by filing out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt8.html">Form CPT8, Application and Undertaking to Cover Employment Outside Canada under the Canada Pension Plan</a> if the employment meets the conditions to be pensionable.</p>
 
-<details><summary>What are the <strong>conditions</strong></summary>
+<details><summary>What are the <strong>conditions</strong> to be pensionable</summary>
 <p>The employment must meet <strong>all </strong>of the following conditions:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
@@ -287,8 +287,8 @@
 <li><a href="https://www.canada.ca/en/revenue-agency/campaigns/cpp-enhancement-self-employed.html">Are you self-employed? Here's what the Canada Pension Plan enhancement means for you</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings.html">Canada Pension Plan (CPP) and Employment Insurance (EI) Rulings</a></li>
 </ul>  
-<h3>First Nations worker who are self-employed</h3>
-<p>If you are a self-employed <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations worker <span class="far fa-question-circle"></span></a>, you have the option to file for CPP coverage on your tax-exempt self-employment income by filing <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">Form CPT20, Election to Pay Canada Pension Plan Contributions</a> when filing your personal income tax return.</p>
+<h3>First Nations workers who are self-employed</h3>
+<p>If you are a self-employed <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations worker <span class="far fa-question-circle"></span></a>, , you can elect to pay CPP on your tax-exempt self-employment income by filing out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">Form CPT20, Election to Pay Canada Pension Plan Contributions</a> when filing your personal income tax return.</p>
    
 <h2 id="h_10">What is the CPP enhancement</h2>
 <p>Before January 1, 2019, employees were making a contribution of 4.95% on their pensionable earnings up to their annual maximum pensionable earnings (first ceiling), with employers making an equal contribution. These are the <strong>base contributions </strong>to the CPP. </p>
