--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -239,12 +239,13 @@
 
  <h2 id="h_7a">What to do if you have First Nations employees</h2>
 <p>The employment income of a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee <span class="far fa-question-circle"></span></a> which is exempt from income tax is not subject to CPP contributions.</p>
-<p>You have the option to file for CPP coverage for your First Nations employees by filing out Form CPT124.</p>
+<p>You have the option to file for CPP coverage for your First Nations employees by filing out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">Form CPT124, Application for Coverage of Employment of an Indian in Canada Under the Canada Pension Plan Whose Income is Exempt Under the Income Tax Act</a>.</p>
 
-<p>If you choose not to apply for coverage, a First Nations employee can elect to pay CPP on tax-exempt earnings by filling out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">Form CPT20, Election to Pay Canada Pension Plan Contributions</a> when filing their personal income tax return.</p>
+<p>However, you cannot revoke this election and you have to cover all First Nations employees. Coverage under the CPP starts on either the date you sign the application or on a later date that you specify. It cannot be retroactive to a date before the date you signed the application.</p>
+
+<p>A First Nations employee can elect to pay CPP on tax-exempt earnings by filling out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">Form CPT20, Election to Pay Canada Pension Plan Contributions</a> when filing their personal income tax return.</p>
  
- 
-<p>Learn more about the conditions: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">Form CPT124, Application for Coverage of Employment of an Indian in Canada Under the Canada Pension Plan Whose Income is Exempt Under the Income Tax Act</a></p>
+<p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/first-nations-pop2.html">First Nations workers and the Canada Pension Plan</a></p>
 
 
  <h2 id="h_7b">What to do if you have employees outside Canada</h2>
