--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -240,7 +240,7 @@
  <h2 id="h_7a">What to do if you have First Nations employees</h2>
 <p>The employment income of a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employee <span class="far fa-question-circle"></span></a> which is exempt from income tax is not subject to CPP contributions.</p>
 
-<h3>How to apply for CPP</h3>
+<h3>How to apply for CPP coverage</h3>
 <details><summary>Election by the <strong>employer</strong></summary>You have the option to file for CPP coverage for your First Nations employees by filing out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">Form CPT124, Application for Coverage of Employment of an Indian in Canada Under the Canada Pension Plan Whose Income is Exempt Under the Income Tax Act</a>.</p>
 
 <p>However, you cannot revoke this election and you have to cover all First Nations employees. Coverage under the CPP starts on either the date you sign the application or on a later date that you specify. It cannot be retroactive to a date before the date you signed the application.</p>
