--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -88,7 +88,7 @@
     
   <ul class="noline">    
  <li>
-	 <a href="indianact.html" class="active" aria-current="page">Payments to First Nations workers</a>
+	 <a href="first-nations.html" class="active" aria-current="page">Payments to First Nations workers</a>
 	</li>
  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
