--- a/payroll/calculate/payment/template-payment.html
+++ b/payroll/calculate/payment/template-payment.html
@@ -178,9 +178,6 @@
 <a href="death-benefit.html#gc-document-nav" class="visible-xs visible-sm"> Payments related to death benefits
 </a></li>
 
-<li><a href="indianact.html" class="hidden-xs hidden-sm">Payments to First Nations workers</a>
-      <a href="indianact.html#gc-document-nav" class="visible-xs visible-sm">Payments to First Nations workers</a></li>
-
 <li><a href="pension.html" class="hidden-xs hidden-sm"> Payments related to pension or superannuation
  </a>
 <a href="pension.html#gc-document-nav" class="visible-xs visible-sm"> Payments related to pension or superannuation
@@ -215,6 +212,11 @@
  </a>
 <a href="temp-help.html#gc-document-nav" class="visible-xs visible-sm"> Payments to employee of an employment agency (temporary-help)
 </a></li>
+
+<li><a href="first-nations.html" class="hidden-xs hidden-sm">Payments to First Nations workers</a>
+      <a href="first-nations.html#gc-document-nav" class="visible-xs visible-sm">Payments to First Nations workers</a></li>
+
+
 <li><a href="fishers.html" class="hidden-xs hidden-sm"> Payments to fishers
  </a>
 <a href="fishers.html#gc-document-nav" class="visible-xs visible-sm"> Payments to fishers
@@ -237,6 +239,9 @@
  </a>
 <a href="taxi.html#gc-document-nav" class="visible-xs visible-sm"> Payments to taxi and other passenger-carrying drivers
 </a></li>
+i><a href="truck-drivers.html" class="hidden-xs hidden-sm">Payments to truck drivers</a>
+      <a href="truck-drivers.html#gc-document-nav" class="visible-xs visible-sm">Payments to truck drivers</a></li>
+
 <li><a href="circus.html" class="hidden-xs hidden-sm"> Payments to workers at a circus, fair, parade or similar activity
  </a>
 <a href="circus.html#gc-document-nav" class="visible-xs visible-sm"> Payments to workers at a circus, fair, parade or similar activity
