--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -307,7 +307,12 @@
                            <td><a href="taxi.html">Payments to taxi and other passenger-carrying drivers</a> </td>
                            <td>Type of employment </td>
                         </tr>
-                       
+                         <tr>
+                           <td><a href="truck-drivers.html">Payments to truck drivers</a> <br /> </td>
+                           <td>Type of employment </td>
+                        </tr>
+
+
 			 <tr>
                            <td><a href="circus.html">Payments to workers at a circus, fair, parade or similar activity</a> </td>
                            <td>Type of employment </td>
