--- a/payroll/calculate/payment/first-nations-pop2.html
+++ b/payroll/calculate/payment/first-nations-pop2.html
@@ -90,7 +90,7 @@
  <div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#ajax-fntermall"></div>
 
   <p>Special rules apply to First Nations workers. You will find information to help you determine if a First Nations worker can participate or not in the Canada Pension Plan (CPP). </p>   
-<h2>How to apply for the CPP if a First Nations worker's income is exempt under the Income Tax Act</h2>
+<h2>How to apply for CPP coverage if a First Nations worker's income is exempt under the Income Tax Act</h2>
 
 <details><summary>Election by the <strong>employer</strong></summary>  
       
