--- a/payroll/calculate/payment/truck-drivers.html
+++ b/payroll/calculate/payment/truck-drivers.html
@@ -861,6 +861,27 @@ You need to review specific considerations when you apply the connecting factors
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-1.html#s-6ss-(1)ID0EP5A">ITA: 5(1)</a> </dt>
+<dd>Income from office or employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-1.html#s-6ss-(1)ID0EP5A">ITA: Section 6</a> </dt>
+<dd>Amounts to be included as income from office or employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-1.html#s-6ss-(1)ID0EP5A">ITA: 6(1)(a)</a> </dt>
+<dd>Value of any benefit is to be included as income from office or employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-1.html#s-6ss-(1)ID0EP5A">ITA: 6(1)(b)</a> </dt>
+<dd>Allowance for any purpose </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-31.html#h-286072">ITA: 56(2)</a> </dt>
+<dd>Indirect payments </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-145.html#docCont">ITA: 153(1)</a></dt> <dd>Legal obligation for employers to determine if the employees’ income is tax exempt </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-2.html#h-167746">CPP: 6(1)</a></dt> <dd>Defines pensionable employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-5.html#docCont">CPP: 12(1)</a> </dt>
+<dd>Amount of contributory salary and wages </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/E-15/page-67.html#s-173">ETA: 173</a> </dt>
+<dd>Taxable benefit is considered a supply for GST/HST purposes </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-1.html">IECPR: 2(1)</a></dt>
+<dd>Amount of Insurable Earnings</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-1.html">IECPR: 2(3)</a> </dt>
+<dd>Earnings from Insurable Employment </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/E-5.6/page-1.html#h-215761">EIA: 5(1)</a></dt> <dd>Types of Insurable Employment </dd>
 	
 </dl>
 </div>
