--- a/payroll/calculate/payment/truck-drivers.html
+++ b/payroll/calculate/payment/truck-drivers.html
@@ -290,7 +290,7 @@
   <div class="wb-tabs mrgn-tp-lg">
     <div class="tabpanels">
       <details id="subtab1">
-        <summary><br class="visible-lg"><br class="visible-lg"><br class="visible-lg">Employment income</summary>
+        <summary>Employment income</summary>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 
@@ -718,7 +718,7 @@
  </details>
  
  <details id="subtab3">
-        <summary><br class="visible-lg">Personal services business</summary>
+        <summary>Personal services business</summary>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 
