--- a/payroll/calculate/payment/truck-drivers.html
+++ b/payroll/calculate/payment/truck-drivers.html
@@ -273,7 +273,7 @@
 <ul>
 <li><a href="#subtab1" class="wb-tabs-ext">Employment income</a> </li>
 <li><a href="#subtab2" class="wb-tabs-ext">Self-employment income</a></li>
-<li><a href="#subtab3" class="wb-tabs-ext">Personal services services</a></li>
+<li><a href="#subtab3" class="wb-tabs-ext">Personal services business</a></li>
 
 </ul>
 
