--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -216,6 +216,16 @@
 <div id="ajax-2ayes1" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-info fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>The payer decides what jobs the worker will do. The payer controls the worker with respect to both the results of the work and the method used to do the work. Worker is required to keep a detailed record of the duties performed in each day of work, sometimes referred to as an activity report.</p>
+
+<details><summary>Specific indicator - Trucking</summary> 
+<p>The payer requires the truck driver to:</p>
+<ul>
+<li>Accept all loads and trips assigned to them</li>
+<li>Follow specific routes</li>
+<li>Report daily and explain any delays or downtime regardless of their ability to meet the deadline assigned</li>
+</ul>
+</details> 
+
 </div>
 
 <div id="ajax-2ano1" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
