--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -353,15 +353,24 @@
 		</ul>
 </div>
 
-<div id="ajax-2bno4" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
+<div class="row">
+  <div class="col-md-6">
+ <div id="ajax-2bno4" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-info fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p><small>The worker must ask for the payer's permission to leave the work during the hours that the payer has established and agreed that must be worked. The payer has the final say as to whether the worker can take a leave from work.</small></p>
 </div>
-
-<div id="ajax-2byes4" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
+  </div>
+  <div class="col-md-6">
+ <div id="ajax-2byes4" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info pstn-bttm-xs pstn-rght-xs">
 <h4><span class="fas fa-user text-info fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p><small>The worker doesn't need the payer's permission to leave.</small></p>
 </div>
+  </div>
+</div>
+
+
+
+
 
 </form></div></div>
 
