--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -384,7 +384,7 @@
 </div>
   </div>
   <div class="col-md-6">
- <div id="ajax-2byes4" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info pstn-bttm-xs pstn-rght-xs">
+ <div id="ajax-2byes4" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-info fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p><small>The worker doesn't need the payer's permission to leave.</small></p>
 </div>
