--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -377,14 +377,14 @@
 
 <div class="row">
   <div class="col-md-6">
- <div id="ajax-2bno4" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
-<h4><span class="fas fa-people-arrows text-info fa-1x"> </span> Indicator: Worker is an employee</h4>
+ <div id="ajax-2bno4" class="hidden wb-frmvld gc-font-2019">
+<h4 class="text-info"><span class="fas fa-people-arrows text-info fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p><small>The worker must ask for the payer's permission to leave the work during the hours that the payer has established and agreed that must be worked. The payer has the final say as to whether the worker can take a leave from work.</small></p>
 </div>
   </div>
   <div class="col-md-6">
- <div id="ajax-2byes4" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
-<h4><span class="fas fa-user text-info fa-1x"> </span> Indicator: Worker is self-employed</h4>
+ <div id="ajax-2byes4" class="hidden wb-frmvld gc-font-2019 ">
+<h4 class="text-info"><span class="fas fa-user text-info fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p><small>The worker doesn't need the payer's permission to leave.</small></p>
 </div>
   </div>
@@ -406,12 +406,12 @@
 </div>
 
 <div id="ajax-2byes5" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
-<h4><span class="fas fa-people-arrows text-info fa-1x"> </span> Indicator: Worker is an employee</h4>
+<h5><span class="fas fa-people-arrows text-info fa-1x"> </span> Indicator: Worker is an employee</h5>
 <p>If the worker was unavailable due to sickness, family emergencies, etc., the payer must be notified as per the employment standards requirements. The worker must request permission to be absent from work.</p>
 </div>
 
 <div id="ajax-2bno5" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
-<h4><span class="fas fa-user text-info fa-1x"> </span> Indicator: Worker is self-employed</h4>
+<h5><span class="fas fa-user text-info fa-1x"> </span> Indicator: Worker is self-employed</h5>
 <p>The worker is not required to notify the payer if is not able to work due being sick or having personal emergencies.</p>
 </div>
 </form></div></div>
