--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -344,21 +344,20 @@
 		</ul>
 </div>
 
-<div class="row">
-  <div class="col-md-6">
- <div id="ajax-2bno4" class="hidden wb-frmvld gc-font-2019">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">
+ <div id="ajax-2bno4" class="wb-frmvld gc-font-2019 hidden">
 <h5 class="text-info"><span class="fas fa-people-arrows text-info fa-1x"> </span> Indicator: Worker is an employee</h5>
 <p>The worker must ask for the payer's permission to leave the work during the hours that the payer has established and agreed that must be worked. The payer has the final say as to whether the worker can take a leave from work.</p>
-</div>
-  </div>
-  <div class="col-md-6">
- <div id="ajax-2byes4" class="hidden wb-frmvld gc-font-2019 ">
+</div></li>
+ 
+  <li class="cnjnctn-col">
+     <div id="ajax-2byes4" class="wb-frmvld gc-font-2019 visible">
 <h5 class="text-info"><span class="fas fa-user text-info fa-1x"> </span> Indicator: Worker is self-employed</h5>
 <p>The worker doesn't need the payer's permission to leave.</p>
-</div>
-  </div>
-</div>
-
+</div></li>
+ 
+</ul>
 
 
 
