--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -346,13 +346,13 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
- <div id="ajax-2bno4" class="wb-frmvld gc-font-2019 hidden">
+ <div id="ajax-2bno4" class="hidden wb-frmvld gc-font-2019">
 <h5 class="text-info"><span class="fas fa-people-arrows text-info"></span> Indicator: Worker is an employee</h5>
 <p>The worker must ask for the payer's permission to leave the work during the hours that the payer has established and agreed that must be worked. The payer has the final say as to whether the worker can take a leave from work.</p>
 </div></li>
  
   <li class="cnjnctn-col">
-     <div id="ajax-2byes4" class="wb-frmvld gc-font-2019 visible">
+     <div id="ajax-2byes4" class="hidden wb-frmvld gc-font-2019">
 <h5 class="text-info"><span class="fas fa-user text-info"> </span> Indicator: Worker is self-employed</h5>
 <p>The worker doesn't need the payer's permission to leave.</p>
 </div></li>
