--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -116,18 +116,14 @@
 
 <h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
 <ul class="cnjnctn-type-or cnjnctn-sm">
-	<li class="cnjnctn-col"><a href="#tab1">Interactive questions</a> to get specific results, factors and indicators </li>
-	<li class="cnjnctn-col"><a href="#tab2">Read full-text</a> information using the current guide</li>
+	<li class="cnjnctn-col"><a href="#interactive">Interactive questions</a> to get specific results, factors and indicators </li>
+	<li class="cnjnctn-col"><a href="#https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">Read full-text</a> information using the current RC4110 guide</li>
 	</ul>
-  <div class="wb-tabs mrgn-tp-lg ignore-session">
-    <div class="tabpanels">
-      <details><summary>Answer interactive questions</summary>
-   
+
+<h2 id="interactive">Answer a few questions to help you gather the facts based on your situation</h2>
 <div class="alert alert-warning">
 <p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
 </div>
-
-<h2>Answer a few questions to help you gather the facts based on your situation</h2>
 <p>The indicators from <strong>each question</strong> need to be viewed as a whole in order to help you decide. This also needs to be done on a case-by-case basis.</p>
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or indicators to help you gather the facts based on your situation</p>
 <h3 id="h-1">Gather the facts</h3>
@@ -1734,19 +1730,13 @@
 <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
 </details>
 
-<details><summary><h2 class="h3 text-info" id="case"> <span class="fas fa-address-card text-info"> </span>&nbsp;&nbsp; Employee performing services through their own corporation</h2></summary> 
+<details><summary><h2 class="h3 text-info" id="case2"> <span class="fas fa-address-card text-info"> </span>&nbsp;&nbsp; Employee performing services through their own corporation</h2></summary> 
 <p class="mrgn-tp-md">You need to consider multiple factors to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB). </p>
 
 <p>Learn more: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a>. </p>
 
 </details>
-
-      </details>
- <details>
-        <summary>Read full-text</summary>
-     <p id="tab2">RC4110 Rev. 22</p>
-  <div data-ajax-replace="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html"></div>
-</details></div></div>
+  </div>    
 	 
 	 
 <h2 id="h-4">References</h2>
