--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -112,7 +112,7 @@
 <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province not in Quebec, in a territory, or in another country</li>
 </ul>
 
-<p>Learn more: <a href="contract.html">Determine if a contract is valid</a>.</p>
+<p>Learn more: <a href="contract.html">Determine if a contract is valid</a></p>
 
 <h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
 <ul class="cnjnctn-type-or cnjnctn-sm">
