--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -116,17 +116,18 @@
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">In a province not in Quebec or in a territory</li>
-<li class="cnjnctn-col">Outside Canada and the employment is performed in a province not in Quebec, in a territory, or in another country</li>
+<ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> In a province not in Quebec or in a territory </li>
+<li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province not in Quebec, in a territory, or in another country</li>
 </ul>
 <p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Contract formed in a province or territory not in Quebec</a></p>
 </li>
 <li class="cnjnctn-col">
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">In the province of Quebec</li>
-<li class="cnjnctn-col">Outside Canada and the employment is performed in Quebec</li>
+<ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> In the province of Quebec</li>
+<li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in Quebec</li>
 </ul>
+
 <p>Continue to: <a href="/cra-arc/payroll/guidance/factors-quebec.html">Contract formed in the province of Quebec</a></p>
 </li>
 </ul>
