--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -97,21 +97,24 @@
 
 <p>You need to consider multiple factors to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB).</p>
 
-<h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
+<h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>
 <ul class="cnjnctn-type-or cnjnctn-sm">
 	<li class="cnjnctn-col"><a href="#tab1">Interactive questions</a> to get specific results, factors and indicators </li>
-	<li class="cnjnctn-col"><a href="#tab2">Read full-text</a> information </li>
+	<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">Read full-text</a>, continue to Guide RC4110 guide</li>
 	</ul>
-  <div class="wb-tabs mrgn-tp-lg ignore-session">
-    <div class="tabpanels">
-      <details><summary>Answer interactive questions</summary>
+			 
+<ul class="cnjnctn-type-or cnjnctn-sm">
+	<li class="cnjnctn-col"><a href="#tab1">Interactive questions</a> to get specific results, factors and indicators </li>
+	<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/tax-implications-personal-services-business.html">Read full-text</a> information </li>
+	</ul>
+
+<h2>Answer a few questions for guidance on how to determine if the worker is an incorporated employee </h2>	
    
 <div class="alert alert-warning">
 <p id="tab1">Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
 </div>
 
-<h2>Answer a few questions for guidance on how to determine if the worker is an incorporated employee </h2>	
-	  
+  
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
 <div id="interactive"> 
 <div class="wb-frmvld gc-font-2019">  <form>
@@ -233,12 +236,8 @@
 </div>
 
 
-</details>
- <details>
-        <summary>Read full-text</summary>
-  <div data-ajax-replace="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/tax-implications-personal-services-business.html"></div>
 
-</details></div></div>
+
 
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
   <h3 class="wb-inv">Document navigation</h3>
