--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -89,7 +89,7 @@
 
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Determine if a contract is valid</h1>
- <div id="ajax-classification">
+
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
@@ -115,12 +115,10 @@
 </details>
 <h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
 <ul class="cnjnctn-type-or cnjnctn-sm">
-	<li class="cnjnctn-col"><a href="#tab1">Interactive questions</a> to get specific results, factors and indicators </li>
-	<li class="cnjnctn-col"><a href="#tab2">Read full-text</a> information </li>
+	<li class="cnjnctn-col"><a href="#interactive">Interactive questions</a> to get specific results, factors and indicators </li>
+	<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">Read full-text</a>, continue to Guide RC4110 guide</li>
 	</ul>
-  <div class="wb-tabs mrgn-tp-lg ignore-session">
-    <div class="tabpanels">
-      <details><summary>Answer interactive questions</summary>
+ 
    
 <div class="alert alert-warning">
 <p id="tab1">Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
@@ -244,37 +242,6 @@
 <hr>
 <p>Generally, the following applies when the contract is valid:</p>
 
-<div data-ajax-replace="#ajax-contract"></div>
-
-<details><summary>Who decides when a contract is nul and void</summary>
-<div data-ajax-replace="#ajax-contract-null"></div>
-</details>
-<details><summary>Examples of termination of a contract</summary>
-<div data-ajax-replace="#ajax-contract-stop"></div>
-</details>
-
-
-</div>
-
-</div></div>
-
-</details>
-
- <details>
-        <summary>Read full-text</summary>
-
-<h2 id="tab2">On this page</h2>
-  	
-<ul>
-<li><a href="#h_1">What is considered a valid contract</a></li>
-<li><a href="#h_2">Who decides when a contract is null and void</a></li>
-<li><a href="#h_3">Cessation of a contract</a></li>
-</ul>
-
-<h2 id="h_1">What is considered a valid contract</h2>
-
-<p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
-
 <div id="ajax-contract">
  <div class="table-responsive">
       <table class="table table-striped small table-condensed">
@@ -311,11 +278,13 @@
 	<td>Consent/Intent to be legally bound </td>
 </tr> </tbody> </table>
 </div></div>
-<h2 id="h_2">Who decides when a contract is null and void</h2>
+
+<details><summary>Who decides when a contract is nul and void</summary>
 <div id="ajax-contract-null">
 <p>When addressing the issue of statutory illegality, the courts can decide that a contract is null and void from the beginning (void ab initio) if the formation of the contract was prohibited by statute and if, in the court's assessment, it would not be contrary to public policy to declare the contract void ab initio.</p>
 </div>
-<h2 id="h_3">Termination of a contract</h2>
+</details>
+<details><summary>Examples of termination of a contract</summary>
 <div id="ajax-contract-stop">
 <p>Examples of when a contract is terminated:</p>
 
@@ -333,7 +302,14 @@
 <li>When both the obligations and the consideration set out in the contract have been satisfied (once a contract is completed, it is at its cessation) </li>
 </ul>
 </div>
-</details></div></div>
+</details>
+
+
+</div>
+
+</div></div>
+
+
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
   <h3 class="wb-inv">Document navigation</h3>
   <ul class="pager">
