--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -100,14 +100,9 @@
 <h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>
 <ul class="cnjnctn-type-or cnjnctn-sm">
 	<li class="cnjnctn-col"><a href="#tab1">Interactive questions</a> to get specific results, factors and indicators </li>
-	<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">Read full-text</a>, continue to Guide RC4110 guide</li>
+	<li class="cnjnctn-col">Read the full text, continue to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/tax-implications-personal-services-business.html">Tax implications for a personal services business</a></li>
 	</ul>
 			 
-<ul class="cnjnctn-type-or cnjnctn-sm">
-	<li class="cnjnctn-col"><a href="#tab1">Interactive questions</a> to get specific results, factors and indicators </li>
-	<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/tax-implications-personal-services-business.html">Read full-text</a> information </li>
-	</ul>
-
 <h2>Answer a few questions for guidance on how to determine if the worker is an incorporated employee </h2>	
    
 <div class="alert alert-warning">
@@ -239,13 +234,6 @@
 
 
 
-<nav class="mrgn-bttm-lg mrgn-tp-lg">
-  <h3 class="wb-inv">Document navigation</h3>
-  <ul class="pager">
-    <li class="next"><a href="after.html" rel="next"><span class="wb-inv">Next: </span>Understand the income tax, payroll and GST/HST tax obligations</a></li>
-  </ul>
-</nav>
-
 <hr>
 <h2 id="h_6">References</h2>
 <h3 id="h_6-1">Resources</h3>
@@ -270,7 +258,12 @@
 <dt><a href="">ITA: 256</a> </dt> <dd>Definition of a associated corporations</dd>
 </dl>	
 </div></div>
-
+<nav class="mrgn-bttm-lg mrgn-tp-lg">
+  <h3 class="wb-inv">Document navigation</h3>
+  <ul class="pager">
+    <li class="next"><a href="after.html" rel="next"><span class="wb-inv">Next: </span>Understand the income tax, payroll and GST/HST tax obligations</a></li>
+  </ul>
+</nav>
 
 <section id="psb_2" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
 	</header>	<div class="modal-body">		
