--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -117,7 +117,7 @@
 <h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
 <ul class="cnjnctn-type-or cnjnctn-sm">
 	<li class="cnjnctn-col"><a href="#interactive">Interactive questions</a> to get specific results, factors and indicators </li>
-	<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">Read full-text</a>, continue to Guide RC4110 guide</li>
+	<li class="cnjnctn-col">Read the full text, continue to <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4110/employee-self-employed.html">Guide RC4110</a></li>
 	</ul>
 <h2 id="interactive">Answer a few questions to help you gather the facts based on your situation</h2>
    
