--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -179,18 +179,27 @@
 		</ul>
 	</div>
 
+<ul class="cnjnctn-type-or cnjnctn-sm">
+	<li class="cnjnctn-col">
 <div id="ajax-cont2emp" class="hidden wb-frmvld gc-font-2019 ">
 <h5 class="text-info"><span class="fas fa-people-arrows text-info"></span> Indicator: Worker is an employee</h5>
 <p>Long period or an indefinite period could be an indication of an employer-employee relationship. The working relationship between the payer and the worker does  present a degree of continuity, loyalty, security, subordination, or integration, all of which are generally associated with an employer-employee relationship.</p>
 <p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor2"> Factor 2 - Control</a></p> 
   </div>
-
-
+ </li>
+	<li class="cnjnctn-col">
 <div id="ajax-cont2self" class="hidden wb-frmvld gc-font-2019 ">
 <h5 class="text-info"><span class="fas fa-user text-info"> </span> Indicator: Worker is self-employed</h5>
 <p>A short term contract could be an indication of self-employed. The working relationship between the payer and the worker does not present a degree of continuity, loyalty, security, or integration, all of which are generally associated with an employer-employee relationship.</p>
 <p class="mrgn-tp-lg"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor2"> Factor 2 - Control</a></p> 
 </div>
+</li>
+	</ul>
+
+
+
+
+
 
 </form></div></div></details>
 
